removed Java 9 profile